# omnia

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Libraries/: CMakeLists.txt
Libraries/LibAsset/: ImportManager.cpp  ImportManager.h  ModelImporter.cpp  ModelImporter.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderImporter.cpp  TextureImporter.cpp
Libraries/LibAudio/: CMakeLists.txt  Forward.h
Libraries/LibConcurrency/: Awaitable.h  CMakeLists.txt  Queue.h  Scheduler.cpp  Scheduler.h  Task.h  Temp.cpp  ThreadPool.cpp  ThreadPool.h
Libraries/LibCore/: CMakeLists.txt  Forward.h  Temp.cpp  Utilities.cpp  Utilities.h  Win32Window.cpp  Window.h
Libraries/LibEngine/: CMakeLists.txt
Libraries/LibGraphics/: CMakeLists.txt  Device.h  Forward.h  ModelTypes.h  ShaderTypes.h  TextureTypes.h
Libraries/LibGraphics/D3D12/: DX12Device.cpp  DX12Device.h  DX12Swapchain.cpp  DX12Swapchain.h
Libraries/LibGraphics/Metal/: MTLDevice.cpp  MTLDevice.h  MTLSwapchain.cpp  MTLSwapchain.h
Libraries/LibGraphics/Vulkan/: VkDevice.cpp  VkDevice.h  VkSwapchain.cpp  VkSwapchain.h
Libraries/LibIPC/: CMakeLists.txt  Forward.h  main.cpp
Libraries/LibMath/: CMakeLists.txt  Forward.h  Mat4.h  Math.h  Quat.h  Vec3.h  Vec4.h
Libraries/LibPhysics/: CMakeLists.txt  Forward.h
Libraries/LibPlatform/: CMakeLists.txt  Event.h  Forward.h  Input.cpp  Input.h  InputCodes.h  Window.h
Libraries/LibPlatform/Win32/: WindowWin32.cpp  WindowWin32.h
Libraries/LibRHI/: Buffer.h  CMakeLists.txt  CommandBuffer.h  Device.cpp  Device.h  Forward.h  Pipeline.h  RenderPass.h  RenderTarget.h  ResourceLayout.h  ResourceSet.h  Sampler.h  Shader.h  Swapchain.h  Texture.h
Libraries/LibRHI/D3D12/: DX12Buffer.cpp  DX12Buffer.h  DX12Device.cpp  DX12Device.h  DX12Swapchain.cpp  DX12Swapchain.h  DX12Texture.cpp  DX12Texture.h
Libraries/LibRHI/Vulkan/: VkBuffer.cpp  VkBuffer.h  VkCommandBuffer.cpp  VkCommandBuffer.h  VkDevice.cpp  VkDevice.h  VkPhysicalDevice.cpp  VkPhysicalDevice.h  (+20 more)
Libraries/LibRenderer/: CMakeLists.txt  Camera.cpp  Camera.h  DeferredRenderer.cpp  DeferredRenderer.h  Forward.h  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  SubMesh.cpp  SubMesh.h
Libraries/LibUI/: CMakeLists.txt  Export.h  Forward.h
(+42 files in other folders)
