add_subdirectory(LibAudio)
add_subdirectory(LibCore)
add_subdirectory(LibDebug)
add_subdirectory(LibEngine)
add_subdirectory(LibIPC)
add_subdirectory(LibRHI)
add_subdirectory(LibSocket)
add_subdirectory(LibMath)
add_subdirectory(LibPhysics)
add_subdirectory(LibRenderer)
add_subdirectory(LibUI)
add_subdirectory(LibURL)
